Added card section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,38 @@
         <section>
             <div>
                 <h2 class="note">Notes don't fail, Structure does.</h2>
+                <p class="note-text">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+
+            <div class="mm-box">
+            <div class="main-box">
+                <div class="box">
+                    <div class="icon">
+                        <img class="i-img" src="/assets/Vector.png" alt="">
+                    </div>
+                    <h2 class="sc">Scattered notes</h2>
+                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="box">
+                    <div class="icon"><img class="i-img"  src="/assets/Bookmarks.png" alt=""></div>
+                    <h2 class="sc">asdf</h2>
+                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <img class="i-img"  src="/assets/Brain.png" alt="">
+                    </div>
+                    <h2 class="sc">asdf</h2>
+                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <img class="i-img"  src="/assets/Info.png" alt="">
+                    </div>
+                    <h2 class="sc">asfd</h2>
+                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+            </div>
             </div>
         </section>
 
