Project is almost finished

--- a/index.html
+++ b/index.html
@@ -85,11 +85,87 @@
             </div>
         </section>
 
+        <section class="brain-section">
+           <div class="main-brain">
+                <!--for leftside image -->
+                <div>
+                    <img class="knowledge-img" src="/assets/knowledge.png" alt="">
+                </div>
+                <!-- right side text -->
+                <div class="brain-text">
+                    <h5>THE SOLUTION</h5>
+                    <h1 class="brain-h">Your second brain, <br> structured by design.</h1>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z.<br>It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+                    
+                    <div class="check">
+                        <div class="check-box">
+                            <img src="/assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="check-box">
+                            <img src="/assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="check-box">
+                            <img src="/assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="check-box">
+                            <img src="/assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                    </div>
+                </div>
+
+           </div>
+        </section>
+
+         <section class="cta-wrapper">
+            <div class="cta-box">
+            <h2>Ready To Think More Clearly?</h2>
+
+            <p class="subtitle">
+                Join thousands of learners who are building their personal knowledge vaults.
+            </p>
+
+            <p class="small-text">
+                Start free, no credit card required.
+            </p>
+
+            <a href="#" class="cta-btn">
+                Get Early Access →
+            </a>
+
+            <p class="footer-text">
+                Free during early access • No credit card needed
+            </p>
+            </div>
+        </section>
+
 
     </main>
-    <footer>
+     <footer class="footer">
+    <div class="footer-content">
 
-    </footer>
+      <!-- Logo -->
+      <div class="footer-logo">
+        <img src="/assets/logo-footer.png" alt="">
+      </div>
+
+      <!-- Social Links -->
+      <div class="footer-social">
+        <h4>Social Links</h4>
+        <div class="icons">
+          <a href="#"><i class="fab fa-x-twitter"></i></a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 Personal Knowledge Vault. All rights reserved.
+    </div>
+  </footer>
     
 </body>
 </html>
