--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 <body class="font-inter">
     <header>
@@ -156,7 +158,9 @@
       <div class="footer-social">
         <h4>Social Links</h4>
         <div class="icons">
-          <a href="#"><i class="fab fa-x-twitter"></i></a>
+          <a id="tt" href="#"><i  class="fab fa-x-twitter"></i></a>
+          <a id="tt" href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a id="tt" href="#"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
 
