--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="font-inter">
     <header>
         <nav class="container" >
-            <img class="logo" src="assets/logo-navbar.png" alt="">
+            <img class="logo" src="./assets/logo-navbar.png" alt="">
             <ul class="menu">
                 <li><a href="">Features</a></li>
                 <li><a href="">How It Works</a></li>
@@ -59,26 +59,26 @@
             <div class="main-box">
                 <div class="box">
                     <div class="icon">
-                        <img class="i-img" src="/assets/Vector.png" alt="">
+                        <img class="i-img" src="./assets/Vector.png" alt="">
                     </div>
                     <h2 class="sc">Scattered notes</h2>
                     <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="box">
-                    <div class="icon"><img class="i-img"  src="/assets/Bookmarks.png" alt=""></div>
+                    <div class="icon"><img class="i-img"  src="./assets/Bookmarks.png" alt=""></div>
                     <h2 class="sc">asdf</h2>
                     <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="box">
                     <div class="icon">
-                        <img class="i-img"  src="/assets/Brain.png" alt="">
+                        <img class="i-img"  src="./assets/Brain.png" alt="">
                     </div>
                     <h2 class="sc">asdf</h2>
                     <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="box">
                     <div class="icon">
-                        <img class="i-img"  src="/assets/Info.png" alt="">
+                        <img class="i-img"  src="./assets/Info.png" alt="">
                     </div>
                     <h2 class="sc">asfd</h2>
                     <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
@@ -91,7 +91,7 @@
            <div class="main-brain">
                 <!--for leftside image -->
                 <div>
-                    <img class="knowledge-img" src="/assets/knowledge.png" alt="">
+                    <img class="knowledge-img" src="./assets/knowledge.png" alt="">
                 </div>
                 <!-- right side text -->
                 <div class="brain-text">
@@ -101,19 +101,19 @@
                     
                     <div class="check">
                         <div class="check-box">
-                            <img src="/assets/CheckCircle.png" alt="">
+                            <img src="./assets/CheckCircle.png" alt="">
                             <p>Capture ideas with structure built-in from day one</p>
                         </div>
                         <div class="check-box">
-                            <img src="/assets/CheckCircle.png" alt="">
+                            <img src="./assets/CheckCircle.png" alt="">
                             <p>Capture ideas with structure built-in from day one</p>
                         </div>
                         <div class="check-box">
-                            <img src="/assets/CheckCircle.png" alt="">
+                            <img src="./assets/CheckCircle.png" alt="">
                             <p>Capture ideas with structure built-in from day one</p>
                         </div>
                         <div class="check-box">
-                            <img src="/assets/CheckCircle.png" alt="">
+                            <img src="./assets/CheckCircle.png" alt="">
                             <p>Capture ideas with structure built-in from day one</p>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
 
       <!-- Logo -->
       <div class="footer-logo">
-        <img src="/assets/logo-footer.png" alt="">
+        <img src="./assets/logo-footer.png" alt="">
       </div>
 
       <!-- Social Links -->
