--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="">Why It's Different</a></li>
                                
             </ul>
-            <button class="btn">Get Early Access</button>
+            <a href="" class="btn"> Get Early Access</a>
         </nav>
     </header>
     <main>
@@ -43,8 +43,8 @@
             </p>
 
             <div class="buttons">
-                <a href="#" class="btn primary">Start Building Your Vault →</a>
-                <a href="#" class="btn secondary">▶ See How It Works</a>
+                <a href="" class="btn primary">Start Building Your Vault →</a>
+                <a href="" class="btn secondary">▶ See How It Works</a>
             </div>
             </div>
         </section>
@@ -59,29 +59,30 @@
             <div class="main-box">
                 <div class="box">
                     <div class="icon">
-                        <img class="i-img" src="./assets/Vector.png" alt="">
+                        <img class="card-img" src="./assets/Vector.png" alt="">
                     </div>
-                    <h2 class="sc">Scattered notes</h2>
-                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                    <h2 class="card-title">Scattered notes</h2>
+                    <p class="card-p">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="box">
-                    <div class="icon"><img class="i-img"  src="./assets/Bookmarks.png" alt=""></div>
-                    <h2 class="sc">asdf</h2>
-                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
-                </div>
-                <div class="box">
-                    <div class="icon">
-                        <img class="i-img"  src="./assets/Brain.png" alt="">
-                    </div>
-                    <h2 class="sc">asdf</h2>
-                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                    <div class="icon"><img class="card-img"  src="./assets/Bookmarks.png" alt=""></div>
+                    <h2 class="card-title">Bookmark overload</h2>
+                    <p class="card-p">Hundreds of saved links you'll never revisit or remember.</p>
                 </div>
                 <div class="box">
                     <div class="icon">
-                        <img class="i-img"  src="./assets/Info.png" alt="">
+                        <img class="card-img"  src="./assets/Brain.png" alt="">
                     </div>
-                    <h2 class="sc">asfd</h2>
-                    <p class="your">Your ideas live in 10 different apps, none of them connected.</p>
+                    <h2 class="card-title">No idea connections</h2>
+                    <p class="card-p">Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <img class="card-img"  src="./assets/Info.png" alt="">
+                    </div>
+                    <h2 class="card-title">Forgetting what</h2>
+                    <h2 class="card-title">you learned</h2>
+                    <p class="card-p">Insights stay isolated, never building into bigger understanding no system to retain it.</p>
                 </div>
             </div>
             </div>
@@ -95,7 +96,7 @@
                 </div>
                 <!-- right side text -->
                 <div class="brain-text">
-                    <h5>THE SOLUTION</h5>
+                    <h5 class="bh5">THE SOLUTION</h5>
                     <h1 class="brain-h">Your second brain, <br> structured by design.</h1>
                     <p>Personal Knowledge Vault isn't another note-taking app. z.<br>It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
                     
@@ -106,15 +107,15 @@
                         </div>
                         <div class="check-box">
                             <img src="./assets/CheckCircle.png" alt="">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Connect related concepts automatically as you write</p>
                         </div>
                         <div class="check-box">
                             <img src="./assets/CheckCircle.png" alt="">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Build lasting knowledge through reflection prompts</p>
                         </div>
                         <div class="check-box">
                             <img src="./assets/CheckCircle.png" alt="">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Find anything instantly with semantic search</p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +135,7 @@
                 Start free, no credit card required.
             </p>
 
-            <a href="#" class="cta-btn">
+            <a href="" class="cta-btn">
                 Get Early Access →
             </a>
 
@@ -158,9 +159,9 @@
       <div class="footer-social">
         <h4>Social Links</h4>
         <div class="icons">
-          <a id="tt" href="#"><i  class="fab fa-x-twitter"></i></a>
-          <a id="tt" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a id="tt" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a id="tt" href=""><i  class="fab fa-x-twitter"></i></a>
+          <a id="tt" href=""><i class="fab fa-linkedin-in"></i></a>
+          <a id="tt" href=""><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
 
